ajustes tratados em aula